--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<div class="content ">
 
 							<h1> Pablo bezard<br />
-								Programming</h1>
+								Programmer</h1>
 
 
 						        <p> description <a href="https://html5up.net/license">Creative Commons license</a>.</p>
@@ -51,9 +51,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="elements.html">Proyects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/PBezard" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -69,14 +69,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<span class="date">x</span>
+									<h2><a href="#">My career<br />
+									description</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="#" class="image main"><img src="foto/pablofoto2.jpg" alt="" /></a>
+								<a href="#" class="image main"><img class="pablo" src="foto/pablofoto2.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -86,49 +86,50 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2020</span>
-										<h2><a href="#">Michicake<br />
-										Diseño </a></h2>
+										<span class="date">May 10, 2021</span>
+										<h2><a href="#">Python<br />
+									    Practicas</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="foto/michicake.jpg" alt="" /></a>
-									<p>Diseño con Adobe ilustrator de logotipo y packaging de mi primer empredimiento como cocinero.</p>
+									<a href="#" class="image fit"><img src="images/python.jpg" alt="" /></a>
+									<p>...</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Trabajos</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2016</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">April 22, 2021</span>
+										<h2><a href="#">Nucba<br/>
+										</a> Fullstack Developer</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/nucba.png" alt="" /></a>
+									<p>En Nucba creo muchos proyecto que me ayudaran a fortalecer mis conocimientos como especialista en software.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Trabajos</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Programacion Web<br />
+										HTML, CSS, JS </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/html-css-js.jpg" alt="" /></a>
+									<p> En mis tiempos libres suelo practicar conceptos basicos en el area del Front-end 
+										para estar informado de las nuevas clases y codigos a la hora de haber actualizaciones   
+									</p>
 									<ul class="actions special">
+										<li><a href="#" class="button">Paginas</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+									
+										<h2><a href="#">Michicake<br />
+											Diseño</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="foto/michicake.jpg" alt="" /></a>
+									<p> Adobe ilustrator logotipos y packagings </p>
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
