--- a/sobremi.html
+++ b/sobremi.html
@@ -27,8 +27,8 @@
 			<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Inicio</a></li>
-							<li class="active"><a href="sobremi.html">Sobre mi</a></li>
-							<li><a href="obras.html">Obras</a></li>
+							<li class="active"><a href="generic.html">Sobre mi</a></li>
+							<li><a href="elements.html">Obras</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/PBezard" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
