--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p> <a>Cordoba, Argentinean -
-								 Av velez sarsfield 1055 </p>
+								<p> <a>Cordoba, Argentina -
+								Av velez sarsfield 1055 </p>
 							</section>
 							<section>
 								<h3>Phone</h3>
