--- a/sobremi.html
+++ b/sobremi.html
@@ -52,7 +52,7 @@
 									    Posteriormente he completado 4 cursos en la plataforma de formación Udemy sobre WordPress, WooCommerce, Creación de temas y plugins para WordPress, jQuery, JavaScript ES6, Bootstrap, React, Accesibilidad Web y en la actualidad
 									    soy estudiante en <a href="http://www.nucba.com.ar">NUCBA</a> Educación, E-Learning, Programación, Software, Marketing y Diseño. </p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="" alt="" /></div>
 								
 								<p></p>
 								<p></p>
