--- a/sobremi.html
+++ b/sobremi.html
@@ -49,7 +49,7 @@
 									<h1>Sobre mi</h1>
 									<p>Me inicie en el 2018, en el Instituto Mariano Moreno, Cordoba, Arg. como estudiante desarrollador web, 
 										aprendiendo todo en el entorno Frontend con HTML5, CSS y JavaScript.
-									    Posteriormente he completado 4 cursos en la plataforma de formación Udemy sobre WordPress, WooCommerce, Creación de temas y plugins para WordPress, jQuery, JavaScript ES6, Bootstrap, React, Accesibilidad Web y en la actualidad
+									    Posteriormente he completado 4 cursos en la plataforma de formación Udemy sobre WordPress, WooCommerce, Creación de temas y plugins para WordPress, jQuery, JavaScript ES6, Bootstrap, React, Accesibilidad Web; Actualmente
 									    soy estudiante en <a href="http://www.nucba.com.ar">NUCBA</a> Educación, E-Learning, Programación, Software, Marketing y Diseño. </p>
 								</header>
 								<div class="image main"><img src="" alt="" /></div>
