--- a/obras.html
+++ b/obras.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title> Pablo Bezard - Obras</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="author" content="Pablobezard" />
+		<meta name="despription" content="Mi portfolio,FrontEnd Web Developer">
+		<meta name="keywords" content="Portfilio, developer, FontEnd, work, employed">
+	
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/png" href="images/1067969.png">
