--- a/obras.html
+++ b/obras.html
@@ -77,12 +77,12 @@
 								<div class="conteiner-card">
 									<div class="cards">
 										<figure>
-											<img src="images/Frontend-store.png" alt="">
+											<img src="images/2021-09-02 (2).png" alt="">
 										</figure>
 										<div class="contenido-cards">
-											<h3>Frontend Store Udemy</h3>
+											<h3>Resumenes ingreso UTN </h3>
 									
-										<a href="#">Abrir pagina</a>
+										<a href="https://ingreso-utn.vercel.app/">Abrir pagina</a>
 										</div>
 									</div>
 								</div>
