--- a/obras.html
+++ b/obras.html
@@ -80,7 +80,7 @@
 											<img src="images/2021-09-02 (2).png" alt="">
 										</figure>
 										<div class="contenido-cards">
-											<h3>Resumenes ingreso UTN </h3>
+											<h3>ingreso UTN (<span class="textColor"> in process </span>) </h3>
 									
 										<a href="https://ingreso-utn.vercel.app/">Abrir pagina</a>
 										</div>
