--- a/sobremi.html
+++ b/sobremi.html
@@ -91,7 +91,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Pbezard</li><li>Design: <a href="">PabloBezard</a></li></ul>
 					</div>
 
 			</div>
