añadido de imagenes

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 							<article>
 								<header>
 									
-									<h2><a href="obras.html">Python<br />
+									<h2><a href="obras.html">React<br />
 									<span class="textColor">In process</span> </a></h2>
 								</header>
-								<a href="obras.html" class="image fit"><img src="images/python.jpg" alt="" /></a>
+								<a href="obras.html" class="image fit"><img src="images/react.png" alt="" /></a>
 								<p>Conceptos basicos</p>
 								<ul class="actions special">
 									
@@ -125,7 +125,7 @@
 									<h2><a href="obras.html">HTML CSS<br />
 									 </a></h2>
 								</header>
-								<a href="obras.html" class="image fit"><img src="/images/4-htmlcss.jpg" alt="" /></a>
+								<a href="obras.html" class="image fit"><img src="images/4-htmlcss.jpg" alt="" /></a>
 								<p>  
 								</p>
 								<ul class="actions special">
