--- a/obras.html
+++ b/obras.html
@@ -64,6 +64,19 @@
 										<div class="conteiner-card">
 											<div class="cards">
 												<figure>
+													<img src="images/2021-12-17.png" alt="">
+												</figure>
+												<div class="contenido-cards">
+													<h3>Fetch API</h3>
+												
+												<a href="https://fetch-api-one.vercel.app/">Abrir pagina</a>
+												</div>
+											</div>
+								</div>
+								
+										<div class="conteiner-card">
+											<div class="cards">
+												<figure>
 													<img src="images/ncbafest.jpg" alt="">
 												</figure>
 												<div class="contenido-cards">
