--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<h2><a href="#">Pablo bezard<br />
 									</a></h2>
 									<p>DISEÑO Y PROGRAMO TU SITIO WEB</p>
-									<p>Programador Web, fotógrafo aficionado y futuro ingeniero en sistemas.</p>
+									<p>Programador Web, fotógrafo aficionado y futuro Analista de sistemas.</p>
 								</header>
 								<div class="coneiner-fotito">
 								<a href="#" class="image main"><img src="foto/fotitomia.jpeg" alt="" /></a>
@@ -109,7 +109,9 @@
 								<header>
 								
 									<h2><a href="obras.html">Nucba<br/>
-									</a> Fullstack Developer</h2>
+									</a> Fullstack Developer
+									<span class="textColor">In process</span> </a></h2>
+									
 								</header>
 								<a href="obras.html" class="image fit"><img src="images/nucba.png" alt="" /></a>
 								<p>En Nucba creo muchos proyectos que me ayudarán a fortalecer mis conocimientos como especialista en software.</p>
