--- a/sobremi.html
+++ b/sobremi.html
@@ -48,10 +48,20 @@
 									
 									<h1>Sobre mi</h1>
 									<p>Me inicie en el 2018, en el Instituto Mariano Moreno, Cordoba, Arg. como estudiante desarrollador web, 
-										aprendiendo todo en el entorno Frontend con HTML5, CSS y JavaScript.
-									    Posteriormente he completado 4 cursos en la plataforma de formación Udemy sobre WordPress, WooCommerce, Creación de temas y plugins para WordPress, JavaScript ES6, Bootstrap, Accesibilidad Web; Actualmente
-									    soy estudiante en <a href="http://www.nucba.com.ar">NUCBA</a> Educación, E-Learning, Programación, Software, Marketing y Diseño. </p>
+										aprendiendo todo en el entorno Frontend con HTML5, CSS y JavaScript. En ese entonces me dedique a ser cocinero descubriendo mis habilidades y gustos. Finalmente en 2020 decidi enfoncarme a estudiar
+										para ser un especialista en software;
+									    Posteriormente he completado 2 cursos en la plataforma de formación Udemy sobre Creación de temas y plugins para JavaScript ES6, Bootstrap, Accesibilidad Web. Actualmente
+									    soy estudiante en <a href="http://www.nucba.com.ar">NUCBA</a> Educación, E-Learning, Programación, Software, Marketing - desarrollador Fullstack, también estudiante en el Instituto  <a href="https://www.ies21.edu.ar/">IES 21</a>  - Analista de sistemas </p>
+
+										<h1>About me</h1>
+										<p>I started in 2018, at the Mariano Moreno Institute, Cordoba, Arg. as a web developer student,
+										learning everything in the Frontend environment with HTML5, CSS and JavaScript. At that time I dedicated myself to being a cook discovering my skills and tastes. Finally in 2020 I decided to focus on studying
+										to be a software specialist;
+										Subsequently I have completed 2 courses on the Udemy training platform on Creating themes and plugins for JavaScript ES6, Bootstrap, Web Accessibility. Currently
+										I am a student at <a href="http://www.nucba.com.ar">NUCBA</a> Education, E-Learning, Programming, Software, Marketing - Fullstack developer, also a student at the Institute <a href= "https://www.ies21.edu.ar/">IES 21</a> - Systems Analyst </p>	
 								</header>
+
+
 								<div class="image main"><img src="" alt="" /></div>
 								
 								<p></p>
